add check-mount hook
Signed-off-by: Andrew Gregory <andrew.gregory.8@gmail.com>

--- a/README.pod
+++ b/README.pod
@@ -8,6 +8,8 @@ pachooks - sample hooks for libalpm/pacman
 
 =item check-boot - check that /boot is mounted before trying to modify it
 
+=item check-mount - check that necessary devices are mounted
+
 =item check-suid - print post-install warnings for suid/getcap binaries
 
 =item fc-cache - rebuild system font information cache
