--- a/README.pod
+++ b/README.pod
@@ -8,6 +8,8 @@ pachooks - sample hooks for libalpm/pacman
 
 =item check-boot - check that /boot is mounted before trying to modify it
 
+=item check-license - warn if a package with an unapproved license is installed
+
 =item check-mount - check that necessary devices are mounted
 
 =item check-suid - print post-install warnings for suid/getcap binaries
