--- a/README.pod
+++ b/README.pod
@@ -10,7 +10,11 @@ pachooks - sample hooks for libalpm/pacman
 
 =item check-suid - print post-install warnings for suid/getcap binaries
 
+=item fc-cache - rebuild system font information cache
+
 =item info-install, info-remove - update info file database
+
+=item mkfontscale-otf, mkfontscale-ttf - update X11 font name files
 
 =item snapshot-pre-snapper, snapshot-post-snapper - take filesystem snapshots
 
