add update-desktop-database hook
Signed-off-by: Andrew Gregory <andrew.gregory.8@gmail.com>

--- a/README.pod
+++ b/README.pod
@@ -23,6 +23,8 @@ as examples for how to write hooks.
 
 =item sync - sync storage caches to reduce the risk of file system corruption
 
+=item update-desktop-database - update cache databse for F<.desktop> files
+
 =back
 
 =head1 COPYRIGHT AND LICENSE
