--- a/README.pod
+++ b/README.pod
@@ -14,7 +14,9 @@ pachooks - sample hooks for libalpm/pacman
 
 =item info-install, info-remove - update info file database
 
-=item mkfontscale-otf, mkfontscale-ttf - update X11 font name files
+=item mkfontscale-otf, mkfontscale-ttf - update X11 scalable font name files
+
+=item mkfontdir-otf, mkfontscale-ttf - update X11 bitmap font name files
 
 =item snapshot-pre-snapper, snapshot-post-snapper - take filesystem snapshots
 
